--- a/src/scss/layout/_nav.scss
+++ b/src/scss/layout/_nav.scss
@@ -16,10 +16,14 @@
 
 			.logo {
 				fill: $color-black;
+			    background-image: linear-gradient(180deg, transparent 65%, $color-primary 0);
+			    background-size: 0 100%;
+			    background-repeat: no-repeat;
 			    transition: all .2s ease;
 
 				&:hover {
-					fill: $color-primary;
+					// fill: $color-primary;
+					background-size: 100% 100%;
 				}
 			}
 		}
