--- a/src/scss/layout/_work-header.scss
+++ b/src/scss/layout/_work-header.scss
@@ -15,6 +15,37 @@
 				@include span-columns(12);
 				@include shift(0);
 			}
+
+			// #productDesignLink {
+			// 	position: relative;
+			// 	padding-right: 45px;
+			// 	display: inline-block;
+
+			// 	@include media($mobile) {
+			// 		padding-right: 30px;
+			// 	}
+
+			// 	&:after {
+			// 		content: "*";
+			// 		position: absolute;
+			// 		height: 30px;
+			// 		width: 30px;
+			// 		right: 5px;
+			// 		top: 50%;
+			// 		transform: translateY(-40%);
+			// 		// background: url('../img/question-mark.svg') no-repeat;
+
+			// 		@include media($tablet) {
+			// 			height: 25px;
+			// 			width: 25px;
+			// 		}
+
+			// 		@include media($mobile) {
+			// 			height: 20px;
+			// 			width: 20px;
+			// 		}
+			// 	}
+			// }
 		}
 	}
 }
